fixed the footer sticking out when the screen size is small, tweaked some game mechanic, see readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,10 +66,11 @@ top: -50px;
     background: white;
 }
 
-    .footer {
+.footer {
     text-align: center;
     color: white;
     font-size: 20px;
+
     }
 
 #userName {
@@ -97,7 +98,7 @@ h5 {
 }
 
 #cluePerson {
-    padding: 5px 20px 5px 5px;
+    padding: 5px 30px 5px 5px;
     background: white;
     color: black;
     position: relative;
@@ -155,4 +156,16 @@ h5 {
 
 .footercont {
     background: #3b5998;
+    grid-row-start: 10;
+    grid-row-end: 11;
 }
+
+html {
+    height: 100%;
+  }
+
+body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+  }
